--- a/bio/contactme/contactme.css
+++ b/bio/contactme/contactme.css
@@ -2,42 +2,42 @@ body, html {
   height: 100% auto;
   height: 100% auto;
   margin: 0;
-  background-color: rgb(126, 126, 126);
+  background-color: rgb(17, 15, 12);
   background-image: url("stars-5120x2880-star-trail-galaxy-sky-4k-6k-18295.jpg") ;
   background-repeat: no-repeat;
   background-size: cover;
-
 }
 
 
   .boxfade{
-
-
+    width: auto;
+    height: auto;
     box-shadow: 10px 10px 15px rgba(77, 77, 77, 0.493);
     border: 10px solid rgba(77, 77, 77, 0);
     border-radius:  5px;
-  -webkit-transition: all 1s ease-in;
-  -moz-transition: all 1s ease-in;
-  -ms-transition: all 1s ease-in;
-  -o--transition: all 1s ease-in;
-  transition: all 1s ease-in;
-   }
 
+    -webkit-transition: all 1s ease-in;
+    -moz-transition: all 1s ease-in;
+    -ms-transition: all 1s ease-in;
+    -o--transition: all 1s ease-in;
+    transition: all 1s ease-in;
+   }
   .boxfade:hover{
     background-color:rgba(129, 122, 96, 0.466);
     -webkit-opacity: 2;
     -moz-opacity: 2;
     opacity: 2;
   }
-
- .container{
-
-  width: 800px;
-  margin: 50px auto;
-  display: table;
-  box-sizing: border-box;
-
+  .container{
+    width: 800px;
+    margin: 50px auto;
+    display: table;
+    box-sizing: border-box;
  }
+
+
+
+
 
 .row{
   margin: 20px 0;
@@ -45,20 +45,19 @@ body, html {
 }
 
 
+
+
 .column{
+  display:table-cell ;
+  padding: 10px;
+  width: 33.33333%;
+  text-align: center;
+  color: black;
+  vertical-align: middle;
 
-
-display:table-cell ;
-padding: 10px;
-width: 33.33333%;
-text-align: center;
-color: black;
-vertical-align: middle;
-
-border-right:10px  solid rgba(0, 0, 0, 0.219);
-border-left: 10px solid rgba(0, 0, 0, 0.219);
-transition: .5s;
-
+  border-right:10px  solid rgba(0, 0, 0, 0.219);
+  border-left: 10px solid rgba(0, 0, 0, 0.219);
+  transition: .5s;
 }
 
 
@@ -139,7 +138,3 @@ background: rgb(96, 148, 155);
 
         }
 }
-
-
-
-
