--- a/bio/aboutme/aboutme.css
+++ b/bio/aboutme/aboutme.css
@@ -1,29 +1,40 @@
+
 body, html {
-  height: 100% auto;
-  height: 100% auto;
-  margin: 0;
+  /*height: 100% auto;
+  height: 100% auto;*/
+  margin:0;
+  justify-content: center;
+
   background-color: rgb(17, 15, 12);
   background-image: url("stars-5120x2880-star-trail-galaxy-sky-4k-6k-18295.jpg") ;
   background-repeat: no-repeat;
   background-size: cover;
+  color: aliceblue;
 }
 
 
   .boxfade{
+
     width: auto;
     height: auto;
     box-shadow: 10px 10px 15px rgba(77, 77, 77, 0.493);
     border: 10px solid rgba(77, 77, 77, 0);
     border-radius:  5px;
 
+    display: flex;
+    align-items: center;
+     justify-content: center;
+     background-color:rgba(129, 122, 96, 0.219);
     -webkit-transition: all 1s ease-in;
     -moz-transition: all 1s ease-in;
     -ms-transition: all 1s ease-in;
     -o--transition: all 1s ease-in;
     transition: all 1s ease-in;
+    padding: 3% 3%;
+    margin: 5% 0;
    }
   .boxfade:hover{
-    background-color:rgba(129, 122, 96, 0.466);
+    background-color:rgba(129, 122, 96, 0.678);
     -webkit-opacity: 2;
     -moz-opacity: 2;
     opacity: 2;
@@ -38,103 +49,76 @@ body, html {
 
 
 
+ .img1{
+  background-image: url("IMG_7703.jpg");
+  align-items: center;
+  justify-content: center;
 
-.row{
-  margin: 20px 0;
-  transition: .5s;
+  background-position: center;
+  background-repeat: no-repeat;
+
+}
+.img2{
+  background-image: url("f83c8b84d1f13174c65bf841444d8785.jpg");
+  align-items: center;
+  justify-content: center;
+
+  background-position: center;
+  background-repeat: no-repeat;
+
+}
+.img3{
+  background-image: url("IMG_3527.jpg");
+  align-items: center;
+  justify-content: center;
+
+  background-position: center;
+  background-repeat: no-repeat;
+
+}
+.img4{
+  background-image: url("cropped-Waterpolo-Ball-120417D-9737-4.jpg");
+  align-items: center;
+  justify-content: center;
+
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+
+
+.p1{
+  font-family:Arial, Helvetica, sans-serif;
+  font-size: 20px;
+
+  font-weight:80;
+}
+.p2{
+  font-family:Arial, Helvetica, sans-serif;;
+  font-size: 20px;
+
+  font-weight:80;
+}
+.p3{
+  font-family:Arial, Helvetica, sans-serif;;
+  font-size: 20px;
+
+  font-weight: 80;
+}
+.p4{
+  font-family:Arial, Helvetica, sans-serif;;
+  font-size: 20px;
+
+  font-weight:80;
+}
+.p5{
+  font-family:Arial, Helvetica, sans-serif;;
+  font-size: 20px;
+
+  font-weight:80;
 }
 
 
 
 
-.column{
-  display:table-cell ;
-  padding: 10px;
-  width: 33.33333%;
-  text-align: center;
-  color: black;
-  vertical-align: middle;
 
-  border-right:10px  solid rgba(0, 0, 0, 0.219);
-  border-left: 10px solid rgba(0, 0, 0, 0.219);
-  transition: .5s;
-}
-
-
-.row:nth-child(1) .column:nth-child(1){
-
-    background: blue;
-
-}
-.row:nth-child(1) .column:nth-child(2){
-
-  background: rgb(0, 73, 6);
-
-}
-.row:nth-child(1) .column:nth-child(3){
-
-  background: rgb(0, 73, 6);
-
-}
-
-
-
-
-.row:nth-child(2) .column:nth-child(1){
-
-  background: rgb(132, 12, 202);
-
-}
-.row:nth-child(2) .column:nth-child(2){
-
-background: rgb(90, 207, 0.100);
-
-}.row:nth-child(2) .column:nth-child(3){
-
-  background: rgb(0, 73, 6);
-
-}
-
-
-
-
-
-.row:nth-child(3) .column:nth-child(1){
-
-  background: rgb(84, 84, 122);
-
-}
-.row:nth-child(3) .column:nth-child(2){
-
-background: rgb(96, 148, 155);
-
-}.row:nth-child(3) .column:nth-child(3){
-
-  background: rgb(0, 73, 6);
-
-}
-
-
-@media (max-width:900px){
-
-        .container{
-
-            margin: 0;
-            padding: 0;
-            width: 100%;
-        }
-
-        .column{
-          width: 100px auto;
-          display: block;
-          margin: 10px 0;
-          border: 10px 0;
-          box-sizing: border-box;
-        }
-
-        .row{
-
-          margin: 0;
-
-        }
-}
